created user model and added CRUD operations for user model with swagger definitions
